@@ -1,6 +1,11 @@
 [2015-09-xx]
 Version 0.7.3 UNRELEASED
 
+- Bug fixes:
+
+  * [cmdline] Correctly calculate the indentation for multi-byte encoded strings
+    in command line "show" (Closes: #360202)
+
 - User visible changes:
 
   * Make boundaries of sessions in the log file more clear (Closes: #269275)
